--- a/index.html
+++ b/index.html
@@ -46,29 +46,41 @@
         <div class="carousel-item active">
             <img src="pic/arkngihtspic.png" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block" id="bodytextonpic">
-                <h5>Welcome</h5>
-                <p>To The Terra.</p>
-                <button class="btn btn-dark" type="button" href="about.html" id="btwh">Watching</button>
+                <div class="card" style="width: auto;" id="cbbody">
+                    <div class="card-body">
+                        <h5 class="card-title">Welcome</h5>
+                        <p class="card-text">To The Terra</p>
+                        <a href="about.html" class="btn btn-dark" id="btwh">Watching</a>
+                    </div>
+                </div>
+                <!--<button class="btn btn-dark" type="button" href="about.html" id="btwh">Watching</button>-->
             </div>
         </div>
     </div>
     <div class="container-fluid" id="column">
         <div class="body">
             <div class="row">
-                <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12">
-                    <h2 class="text-about">Rhodes Island</h2>
-                    <pre>The most advanced Infected research institution in the world, 
-Rhodes Island is not afraid to employ the Infected. 
-They are known to go deep into hazardous areas to 
-take care of issues related to the Infected. 
-They are currently working with many governments, 
-corporations, and NGOs to uncover the causes of an 
-Infected riot on an unprecedented scale. 
-Your decisions will have a significant impact on 
-how Rhodes Island will proceed.</pre>
+                <div class="container-fluid col-xl-6 col-lg-12 col-md-12 col-sm-12">
+                    <div class="card" style="width: auto;">
+                        <div class="card-body" id="textabout">
+                            <h2 class="text-about">Rhodes Island</h2>
+                            <pre>The most advanced Infected research institution 
+in the world, Rhodes Island is not afraid to employ the Infected. 
+They are known to go deep into hazardous areas to take care 
+of issues related to the Infected. They are currently 
+working with many governments, corporations, and NGOs 
+to uncover the causes of an Infected riot on an 
+unprecedented scale. Your decisions will have a 
+significant impact on how Rhodes Island will proceed.</pre>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12">
-                    <center><img src="pic/AK.jpg" width="600px" height="350px" id="picAK"></center>
+                <div class="container-fluid col-xl-6 col-lg-12 col-md-12 col-sm-12">
+                    <div class="card" style="width: auto;">
+                        <div class="card-body">
+                            <center><img src="pic/AK.jpg" width="600px" height="350px" id="picAK"></center>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
