--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="body">
             <div class="row">
                 <div class="container-fluid col-xl-6 col-lg-12 col-md-12 col-sm-12">
-                    <div class="card" style="width: auto;">
+                    <div class="card" style="width: auto; height: 385px;">
                         <div class="card-body" id="textabout">
                             <h2 class="text-about">Rhodes Island</h2>
                             <pre>The most advanced Infected research institution 
@@ -78,10 +78,26 @@ significant impact on how Rhodes Island will proceed.</pre>
                 <div class="container-fluid col-xl-6 col-lg-12 col-md-12 col-sm-12">
                     <div class="card" style="width: auto;">
                         <div class="card-body">
-                            <center><img src="pic/AK.jpg" width="600px" height="350px" id="picAK"></center>
+                            <center><img src="pic/AK.jpg" width="590px" height="350px" id="picAK"></center>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="card-footer">
+        <div class="row">
+            <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12">
+                <center><img src="pic/Logo.png"></center>
+            </div>
+            <div class="col-xl-2 col-lg-2 col-md-12 col-sm-12">
+                ----
+            </div>
+            <div class="col-xl-2 col-lg-2 col-md-12 col-sm-12">
+                ----
+            </div>
+            <div class="col-xl-2 col-lg-2 col-md-12 col-sm-12">
+                ----
             </div>
         </div>
     </div>
