--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img src="pic/arkngihtspic.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block" id="bodytextonpic">
+            <div class="carousel-caption" id="bodytextonpic">
                 <div class="card" style="width: auto;" id="cbbody">
                     <div class="card-body">
                         <h5 class="card-title">Welcome</h5>
@@ -78,7 +78,7 @@ significant impact on how Rhodes Island will proceed.</pre>
                 <div class="container-fluid col-xl-6 col-lg-12 col-md-12 col-sm-12">
                     <div class="card" style="width: auto;">
                         <div class="card-body">
-                            <center><img src="pic/AK.jpg" width="590px" height="350px" id="picAK"></center>
+                            <center><img src="pic/AK.jpg" width="75%" height="50%" id="picAK"></center>
                         </div>
                     </div>
                 </div>
@@ -87,17 +87,46 @@ significant impact on how Rhodes Island will proceed.</pre>
     </div>
     <div class="card-footer">
         <div class="row">
-            <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12">
-                <center><img src="pic/Logo.png"></center>
+            <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12" id="pmfoot">
+                <div class="card-body">
+                    <center><img src="pic/Logo.png" width="25%" height="10%" id="footpic"></center>
+                </div>
             </div>
             <div class="col-xl-2 col-lg-2 col-md-12 col-sm-12">
-                ----
+                <center>
+                    <div class="card" style="width:auto">
+                        <div class="card-body" id="footcards">
+                            <h4 class="card-title">Mobile app</h4>
+                            <pre>Features
+Live share
+Video record</pre>
+                        </div>
+                    </div>
+                </center>
             </div>
             <div class="col-xl-2 col-lg-2 col-md-12 col-sm-12">
-                ----
+                <center>
+                    <div class="card" style="width:auto">
+                        <div class="card-body" id="footcards">
+                            <h4 class="card-title">Community</h4>
+                            <pre>Featured artists
+The Portal
+Live events</pre>
+                        </div>
+                    </div>
+                </center>
             </div>
             <div class="col-xl-2 col-lg-2 col-md-12 col-sm-12">
-                ----
+                <center>
+                    <div class="card" style="width:auto">
+                        <div class="card-body" id="footcards">
+                            <h4 class="card-title">Company</h4>
+                            <pre>About us
+Contact us
+History</pre>
+                        </div>
+                    </div>
+                </center>
             </div>
         </div>
     </div>
