--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="javascript:void(0)">Support</a>
                     </li>
                 </ul>
-                <button class="btn btn-primary" type="button" id="btright">Register</button>
+                <a href="about.html" class="btn btn-dark" type="button">Register</a>
             </div>
         </div>
     </nav>
@@ -46,14 +46,9 @@
         <div class="carousel-item active">
             <img src="pic/arkngihtspic.png" class="d-block w-100" alt="...">
             <div class="carousel-caption" id="bodytextonpic">
-                <div class="card" style="width: auto;" id="cbbody">
-                    <div class="card-body">
-                        <h5 class="card-title">Welcome</h5>
-                        <p class="card-text">To The Terra</p>
-                        <a href="about.html" class="btn btn-dark" id="btwh">Watching</a>
-                    </div>
-                </div>
-                <!--<button class="btn btn-dark" type="button" href="about.html" id="btwh">Watching</button>-->
+                <h5 class="card-title">Welcome</h5>
+                <p class="card-text">To The Terra</p>
+                <a href="about.html" class="btn btn-dark" id="btwh">Watching</a>
             </div>
         </div>
     </div>
