--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <title>About</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -20,6 +21,8 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="mynavbar">
+                <ul class="navbar-nav justify-centent-center me-auto">
+                </ul>
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="javascript:void(0)">Features</a>
@@ -34,10 +37,11 @@
                         <a class="nav-link" href="javascript:void(0)">Support</a>
                     </li>
                 </ul>
-                <button class="btn btn-primary" type="button">Register</button>
+                <a href="index.html" class="btn btn-dark" type="button">Back</a>
             </div>
         </div>
     </nav>
+    </div>
 </body>
 
 </html>
