--- a/about.html
+++ b/about.html
@@ -42,6 +42,179 @@
         </div>
     </nav>
     </div>
+    <div class="card" id="pf">
+        <img src="pic/pf.jpg" alt="Avatar" style="width:20%" class="center">
+        <div class="container">
+            <h4><b>นายวิศรุต อินทบุญ</b></h4>
+            <p id="textsize">Mr.Witsarut Intaboon</p>
+            <p id="textsize">(เวคิน)</p>
+        </div>
+    </div>
+
+    <div class="card-body" id="contect">
+        <center><h1 style="font-size: clamp(24px, 2.5vw, 60px);" id="contec-title">contect</h1></center>
+        <div class="row">
+            <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <img src="pic/logo1.png" alt="Avatar" style="width:30%" class="center">
+                    <div class="container">
+                        <pre><b>086-831-7057</b></pre>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <img src="pic/logo2.png" alt="Avatar" style="width:30%" class="center">
+                    <div class="container">
+                        <pre><b>mr.witsarut9@gmail.com</b></pre>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <img src="pic/logo3.png" alt="Avatar" style="width:20%" class="center">
+                    <div class="container">
+                        <pre><b>506 หมู่ 1 ต.สันโป่ง อ.แม่ริม 
+จ.เชียงใหม่ 50180</b></pre>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="hr"></div>
+
+    <div class="card-body" id="Aboutme">
+        <center><h1 style="font-size: clamp(24px, 2.5vw, 60px);" id="contec-title">About me</h1></center>
+        <div class="row">
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <div class="container">
+                        <h5><b>Gender</b></h5>
+                        <p id="text-p">Male</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <div class="container">
+                        <h5><b>Date of brith</b></h5>
+                        <p id="text-p">24 เมษายน 2545</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" style="padding-top: 5%;">
+                <div class="card" id="pf">
+                    <div class="container">
+                        <h5><b>Marital Status</b></h5>
+                        <p id="text-p">Single</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" style="padding-top: 5%;">
+                <div class="card" id="pf">
+                    <div class="container">
+                        <h5><b>Driver’s license</b></h5>
+                        <p id="text-p">Motorcycle</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="hr"></div>
+
+    <div class="card-body" id="Aboutme">
+        <center><h1 style="font-size: clamp(24px, 2.5vw, 60px);" id="contec-title">Achievements</h1></center>
+        <div class="row">
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <img src="pic/hammer.png" alt="Avatar" style="width:30%" class="center">
+                    <div class="container">
+                        <pre><b>Game map Developer</b></pre>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <img src="pic/discrod.png" alt="Avatar" style="width:30%" class="center">
+                    <div class="container">
+                        <pre><b>Discord bot Developer</b></pre>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="hr"></div>
+
+    <div class="card-body" id="Aboutme">
+        <center><h1 style="font-size: clamp(24px, 2.5vw, 60px);" id="contec-title">Experience</h1></center>
+        <div class="row">
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <img src="pic/advice.jpg" alt="Avatar" style="width:30%" class="center">
+                    <div class="container">
+                        <pre><b>Advice Chiangmai</b></pre>
+                        <p id="text-p">Trainee</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <img src="pic/logolanna.png" alt="Avatar" style="width:30%" class="center">
+                    <div class="container">
+                        <pre><b>LANNA POLYTECHNIC CHIANGMAI</b></pre>
+                        <p id="text-p">create a project</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="hr"></div>
+
+    <div class="card-body" id="Aboutme">
+        <center><h1 style="font-size: clamp(24px, 2.5vw, 60px);" id="contec-title">Education</h1></center>
+        <div class="row">
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <img src="pic/logolanna.png" alt="Avatar" style="width:30%" class="center">
+                    <div class="container">
+                        <pre><b>วิทยาลัยเทคโนโลยีโปลิเทคนิคลานนา เชียงใหม</b></pre>
+                        <p id="text-p">ประกาศนียบัตรวิชาชีพ ชั้นปีที่ 1 ถึง ปัจจุบัน</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <img src="pic/npm.jpg" alt="Avatar" style="width:30%" class="center">
+                    <div class="container">
+                        <pre><b>โรงเรียนบ้านหนองปลามัน</b></pre>
+                        <p id="text-p">อนุบาลปีที่ 1 ถึง มัธยมศึกษาปีที่ 3</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="hr"></div>
+
+    <div class="card-body" id="Aboutme">
+        <center><h1 style="font-size: clamp(24px, 2.5vw, 60px);" id="contec-title">Skills</h1></center>
+        <div class="row">
+            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <div class="container">
+                        <pre><b>ประกอบคอมพิวเตอร์ 
+เขียน Web site  
+เขียน Code</b></pre>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
