--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>About</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="CSS.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-sm navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="pic/Logo.png" alt="Avatar Logo" style="width:80px;" class="rounded-pill" href="index.html">
+            <a class="navbar-brand" href="home.html">
+                <img src="pic/Logo.png" alt="Avatar Logo" style="width:80px;" class="rounded-pill">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -37,94 +37,184 @@
                         <a class="nav-link" href="javascript:void(0)">Support</a>
                     </li>
                 </ul>
-                <a href="about.html" class="btn btn-dark" type="button">Register</a>
+                <a href="home.html" class="btn btn-dark" type="button">Back</a>
             </div>
         </div>
     </nav>
     </div>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="pic/arkngihtspic.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption" id="bodytextonpic">
-                <h5 class="card-title">Welcome</h5>
-                <p class="card-text">To The Terra</p>
-                <a href="about.html" class="btn btn-dark" id="btwh">Watching</a>
-            </div>
+    <div class="card" id="pf">
+        <img src="pic/pf.jpg" alt="Avatar" style="width:20%" class="center">
+        <div class="container">
+            <h4><b>นายวิศรุต อินทบุญ</b></h4>
+            <p id="textsize">Mr.Witsarut Intaboon</p>
+            <p id="textsize">(เวคิน)</p>
         </div>
     </div>
-    <div class="container-fluid" id="column">
-        <div class="body">
-            <div class="row">
-                <div class="container-fluid col-xl-6 col-lg-12 col-md-12 col-sm-12">
-                    <div class="card" style="width: auto; height: 385px;">
-                        <div class="card-body" id="textabout">
-                            <h2 class="text-about">Rhodes Island</h2>
-                            <pre>The most advanced Infected research institution 
-in the world, Rhodes Island is not afraid to employ the Infected. 
-They are known to go deep into hazardous areas to take care 
-of issues related to the Infected. They are currently 
-working with many governments, corporations, and NGOs 
-to uncover the causes of an Infected riot on an 
-unprecedented scale. Your decisions will have a 
-significant impact on how Rhodes Island will proceed.</pre>
-                        </div>
-                    </div>
-                </div>
-                <div class="container-fluid col-xl-6 col-lg-12 col-md-12 col-sm-12">
-                    <div class="card" style="width: auto;">
-                        <div class="card-body">
-                            <center><img src="pic/AK.jpg" width="75%" height="50%" id="picAK"></center>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="card-footer">
+
+    <div class="card-body" id="contect">
+        <center><h1 style="font-size: clamp(24px, 2.5vw, 60px);" id="contec-title">contect</h1></center>
         <div class="row">
-            <div class="col-xl-6 col-lg-12 col-md-12 col-sm-12" id="pmfoot">
-                <div class="card-body">
-                    <center><img src="pic/Logo.png" width="25%" height="10%" id="footpic"></center>
+            <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <img src="pic/logo1.png" alt="Avatar" id="icon" class="center">
+                    <div class="container">
+                        <pre><b>086-831-7057</b></pre>
+                    </div>
                 </div>
             </div>
-            <div class="col-xl-2 col-lg-4 col-md-12 col-sm-12">
-                <center>
-                    <div class="card" style="width:auto">
-                        <div class="card-body" id="footcards">
-                            <h4 class="card-title">Mobile app</h4>
-                            <pre>Features
-Live share
-Video record</pre>
-                        </div>
+            <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <img src="pic/logo2.png" alt="Avatar" id="icon" class="center">
+                    <div class="container">
+                        <pre><b>mr.witsarut9@gmail.com</b></pre>
                     </div>
-                </center>
+                </div>
             </div>
-            <div class="col-xl-2 col-lg-4 col-md-12 col-sm-12">
-                <center>
-                    <div class="card" style="width:auto">
-                        <div class="card-body" id="footcards">
-                            <h4 class="card-title">Community</h4>
-                            <pre>Featured artists
-The Portal
-Live events</pre>
-                        </div>
+            <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <img src="pic/logo3.png" alt="Avatar" id="icon" class="center">
+                    <div class="container">
+                        <pre><b>506 หมู่ 1 ต.สันโป่ง อ.แม่ริม 
+จ.เชียงใหม่ 50180</b></pre>
                     </div>
-                </center>
-            </div>
-            <div class="col-xl-2 col-lg-4 col-md-12 col-sm-12">
-                <center>
-                    <div class="card" style="width:auto">
-                        <div class="card-body" id="footcards">
-                            <h4 class="card-title">Company</h4>
-                            <pre>About us
-Contact us
-History</pre>
-                        </div>
-                    </div>
-                </center>
+                </div>
             </div>
         </div>
     </div>
+
+    <div class="hr"></div>
+
+    <div class="card-body" id="Aboutme">
+        <center><h1 style="font-size: clamp(24px, 2.5vw, 60px);" id="contec-title">About me</h1></center>
+        <div class="row">
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <div class="container">
+                        <h5><b>Gender</b></h5>
+                        <p id="text-p">Male</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <div class="container">
+                        <h5><b>Date of brith</b></h5>
+                        <p id="text-p">24 เมษายน 2545</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" style="padding-top: 5%;">
+                <div class="card" id="pf">
+                    <div class="container">
+                        <h5><b>Marital Status</b></h5>
+                        <p id="text-p">Single</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12" style="padding-top: 5%;">
+                <div class="card" id="pf">
+                    <div class="container">
+                        <h5><b>Driver’s license</b></h5>
+                        <p id="text-p">Motorcycle</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="hr"></div>
+
+    <div class="card-body" id="Aboutme">
+        <center><h1 style="font-size: clamp(24px, 2.5vw, 60px);" id="contec-title">Achievements</h1></center>
+        <div class="row">
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <img src="pic/hammer.png" alt="Avatar" id="icon" class="center">
+                    <div class="container">
+                        <pre><b>Game map Developer</b></pre>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <img src="pic/discrod.png" alt="Avatar" id="icon" class="center">
+                    <div class="container">
+                        <pre><b>Discord bot Developer</b></pre>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="hr"></div>
+
+    <div class="card-body" id="Aboutme">
+        <center><h1 style="font-size: clamp(24px, 2.5vw, 60px);" id="contec-title">Experience</h1></center>
+        <div class="row">
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <img src="pic/advice.jpg" alt="Avatar" id="icon" class="center">
+                    <div class="container">
+                        <pre><b>Advice Chiangmai</b></pre>
+                        <p id="text-p">Trainee</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <img src="pic/logolanna.png" alt="Avatar" id="icon" class="center">
+                    <div class="container">
+                        <pre><b>LANNA POLYTECHNIC CHIANGMAI</b></pre>
+                        <p id="text-p">create a project</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="hr"></div>
+
+    <div class="card-body" id="Aboutme">
+        <center><h1 style="font-size: clamp(24px, 2.5vw, 60px);" id="contec-title">Education</h1></center>
+        <div class="row">
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <img src="pic/logolanna.png" alt="Avatar" id="icon" class="center">
+                    <div class="container">
+                        <pre><b>วิทยาลัยเทคโนโลยีโปลิเทคนิคลานนา เชียงใหม</b></pre>
+                        <p id="text-p">ประกาศนียบัตรวิชาชีพ ชั้นปีที่ 1 ถึง ปัจจุบัน</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <img src="pic/npm.jpg" alt="Avatar" id="icon" class="center">
+                    <div class="container">
+                        <pre><b>โรงเรียนบ้านหนองปลามัน</b></pre>
+                        <p id="text-p">อนุบาลปีที่ 1 ถึง มัธยมศึกษาปีที่ 3</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="hr"></div>
+
+    <div class="card-body" id="Aboutme">
+        <center><h1 style="font-size: clamp(24px, 2.5vw, 60px);" id="contec-title">Skills</h1></center>
+        <div class="row">
+            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+                <div class="card" id="pf">
+                    <div class="container">
+                        <pre><b>ประกอบคอมพิวเตอร์ 
+เขียน Web site  
+เขียน Code</b></pre>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
