--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="home.html">
                 <img src="pic/Logo.png" alt="Avatar Logo" style="width:80px;" class="rounded-pill" href="index.html">
