--- a/home.html
+++ b/home.html
@@ -59,14 +59,14 @@
                     <div class="card" style="width: auto; height: 385px;">
                         <div class="card-body" id="textabout">
                             <h2 class="text-about">Rhodes Island</h2>
-                            <pre>The most advanced Infected research institution 
+                            <p>The most advanced Infected research institution 
 in the world, Rhodes Island is not afraid to employ the Infected. 
 They are known to go deep into hazardous areas to take care 
 of issues related to the Infected. They are currently 
 working with many governments, corporations, and NGOs 
 to uncover the causes of an Infected riot on an 
 unprecedented scale. Your decisions will have a 
-significant impact on how Rhodes Island will proceed.</pre>
+significant impact on how Rhodes Island will proceed.</p>
                         </div>
                     </div>
                 </div>
