final version (full)

--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="home.html">
                 <img src="pic/Logo.png" alt="Avatar Logo" style="width:80px;" class="rounded-pill" href="index.html">
@@ -44,7 +44,7 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="pic/arkngihtspic.png" class="d-block w-100" alt="...">
+            <img src="pic/arkngihtspic.png" class="d-block w-100" alt="..." s>
             <div class="carousel-caption" id="bodytextonpic">
                 <h5 class="card-title">Welcome</h5>
                 <p class="card-text">To The Terra</p>
@@ -55,20 +55,22 @@
     <div class="container-fluid" id="column">
         <div class="body">
             <div class="row">
-                <div class="container-fluid col-xl-6 col-lg-12 col-md-12 col-sm-12">
-                    <div class="card" style="width: auto; height: 385px;">
-                        <div class="card-body" id="textabout">
+                <div class="container-fluid col-xl-6 col-lg-12 col-md-12 col-sm-12" id="textabout">
+                    <!-- <div class="card" style="width: auto; height: 385px;">
+                        <div class="card-body" id="textabout"> -->
                             <h2 class="text-about">Rhodes Island</h2>
-                            <p>The most advanced Infected research institution 
-in the world, Rhodes Island is not afraid to employ the Infected. 
-They are known to go deep into hazardous areas to take care 
-of issues related to the Infected. They are currently 
-working with many governments, corporations, and NGOs 
-to uncover the causes of an Infected riot on an 
-unprecedented scale. Your decisions will have a 
-significant impact on how Rhodes Island will proceed.</p>
-                        </div>
-                    </div>
+                            <pre>The most advanced Infected research 
+institution in the world, Rhodes Island 
+is not afraid to employ the Infected. 
+They are known to go deep into hazardous areas to 
+take care of issues related to the Infected. 
+They are currently working with many governments, 
+corporations, and NGOs to uncover the causes of an 
+Infected riot on an unprecedented scale. Your 
+decisions will have a significant impact on how 
+Rhodes Island will proceed.</pre>
+                        <!-- </div>
+                    </div> -->
                 </div>
                 <div class="container-fluid col-xl-6 col-lg-12 col-md-12 col-sm-12">
                     <div class="card" style="width: auto;">
