--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="home.html">
                 <img src="pic/Logo.png" alt="Avatar Logo" style="width:80px;" class="rounded-pill">
@@ -43,7 +43,7 @@
     </nav>
     </div>
     <div class="card" id="pf">
-        <img src="pic/pf.jpg" alt="Avatar" style="width:20%" class="center">
+        <img src="pic/pf.jpg" alt="Avatar" style="width:20%;" class="center">
         <div class="container">
             <h4><b>นายวิศรุต อินทบุญ</b></h4>
             <p id="textsize">Mr.Witsarut Intaboon</p>
@@ -72,7 +72,7 @@
             </div>
             <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
                 <div class="card" id="pf">
-                    <img src="pic/logo3.png" alt="Avatar" id="icon" class="center">
+                    <img src="pic/logo3.png" alt="Avatar" style="width: 14%; height: 14%;" class="center">
                     <div class="container">
                         <pre><b>506 หมู่ 1 ต.สันโป่ง อ.แม่ริม 
 จ.เชียงใหม่ 50180</b></pre>
@@ -181,7 +181,7 @@
                 <div class="card" id="pf">
                     <img src="pic/logolanna.png" alt="Avatar" id="icon" class="center">
                     <div class="container">
-                        <pre><b>วิทยาลัยเทคโนโลยีโปลิเทคนิคลานนา เชียงใหม</b></pre>
+                        <pre><b>วิทยาลัยเทคโนโลยีโปลิเทคนิคลานนา เชียงใหม่</b></pre>
                         <p id="text-p">ประกาศนียบัตรวิชาชีพ ชั้นปีที่ 1 ถึง ปัจจุบัน</p>
                     </div>
                 </div>
@@ -201,14 +201,14 @@
     <div class="hr"></div>
 
     <div class="card-body" id="Aboutme">
-        <center><h1 style="font-size: clamp(24px, 2.5vw, 60px);" id="contec-title">Skills</h1></center>
+        <center><h1 style="font-size: clamp(24px, 2.5vw, 60px);" id="contec-title-ex">Skills</h1></center>
         <div class="row">
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                 <div class="card" id="pf">
                     <div class="container">
-                        <pre><b>ประกอบคอมพิวเตอร์ 
+                        <pre><h2><b>ประกอบคอมพิวเตอร์ 
 เขียน Web site  
-เขียน Code</b></pre>
+เขียน Code</b></h2></pre>
                     </div>
                 </div>
             </div>
